[tool.poetry]
name = "load_balancer"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.10"
http-parser = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
